Don't bother with DrawTile when the destination rect is empty.  b=237766  r+sr=roc