gfx/src/shared/nsRenderingContextImpl.cpp
@@ -348,12 +348,16 @@ nsRenderingContextImpl::DrawTile(imgIContainer *aImage,
   mTranMatrix->TransformCoord(&dr.x, &dr.y, &dr.width, &dr.height);
   mTranMatrix->TransformCoord(&aXImageStart, &aYImageStart);
 
+  // may have become empty due to transform shinking small number to 0
+  if (dr.IsEmpty())
+    return NS_OK;
+
   nscoord width, height;
   aImage->GetWidth(&width);
   aImage->GetHeight(&height);
 
   if (width == 0 || height == 0)
-    return PR_FALSE;
+    return NS_OK;
 
   nscoord xOffset = (dr.x - aXImageStart) % width;
   nscoord yOffset = (dr.y - aYImageStart) % height;
